@startuml Database_ER_Diagram_CipeStudio

' Définition des entités

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(255)
  * email : VARCHAR(255) <<UNIQUE>>
  * password : VARCHAR(255)
  avatar : VARCHAR(512)
  * role : ENUM('ENFANT', 'AUTEUR', 'EDITEUR', 'ADMIN')
  * is_verified : BOOLEAN
  * is_blocked : BOOLEAN
  otp_code : VARCHAR(6)
  otp_expiry_date : DATETIME
  * created_at : DATETIME
  * updated_at : DATETIME
}

entity "books" as books {
  * id : BIGINT <<PK>>
  --
  * title : VARCHAR(255)
  description : TEXT
  cover_url : VARCHAR(512)
  * status : ENUM('DRAFT', 'PUBLISHED', 'ARCHIVED')
  * author_id : BIGINT <<FK>>
  * created_at : DATETIME
  * updated_at : DATETIME
  --
  INDEX idx_author_id (author_id)
  INDEX idx_status (status)
}

entity "collections" as collections {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(255)
  description : TEXT
  cover_url : VARCHAR(512)
  icon : VARCHAR(100)
  tags : VARCHAR(512)
  * editor_id : BIGINT <<FK>>
  * created_at : DATETIME
  * updated_at : DATETIME
  --
  INDEX idx_editor_id (editor_id)
}

entity "collection_books" as collection_books {
  * collection_id : BIGINT <<PK, FK>>
  * book_id : BIGINT <<PK, FK>>
  --
  PRIMARY KEY (collection_id, book_id)
  INDEX idx_collection_id (collection_id)
  INDEX idx_book_id (book_id)
}

entity "pages" as pages {
  * id : BIGINT <<PK>>
  --
  * book_id : BIGINT <<FK, UNIQUE>>
  draft_url : VARCHAR(1024)
  published_url : VARCHAR(1024)
  * updated_at : DATETIME
  --
  UNIQUE INDEX uk_book_id (book_id)
}

entity "reading_progress" as reading_progress {
  * id : BIGINT <<PK>>
  --
  * reader_id : BIGINT <<FK>>
  * book_id : BIGINT <<FK>>
  current_page : INT
  * is_read : BOOLEAN DEFAULT FALSE
  * is_owned : BOOLEAN DEFAULT FALSE
  last_read_at : DATETIME
  * created_at : DATETIME
  --
  UNIQUE INDEX uk_reader_book (reader_id, book_id)
  INDEX idx_reader_id (reader_id)
  INDEX idx_book_id (book_id)
}

entity "reports" as reports {
  * id : BIGINT <<PK>>
  --
  * reporter_id : BIGINT <<FK>>
  * book_id : BIGINT <<FK>>
  * reason : ENUM('INAPPROPRIATE_CONTENT', 'VIOLENCE', 'HATE_SPEECH', 'SPAM', 'OTHER')
  description : TEXT
  * status : ENUM('PENDING', 'APPROVED', 'REJECTED')
  * created_at : DATETIME
  * updated_at : DATETIME
  --
  INDEX idx_reporter_id (reporter_id)
  INDEX idx_book_id (book_id)
  INDEX idx_status (status)
}

entity "mini_games" as mini_games {
  * id : BIGINT <<PK>>
  --
  * name : VARCHAR(255)
  description : TEXT
  * type : ENUM('DIGITAL_LOCK', 'FILL_BLANKS', 'QUIZ', 'MEMORY')
  * content_json : JSON
  parent_page_id : BIGINT <<FK>>
  * created_at : DATETIME
  * updated_at : DATETIME
  --
  INDEX idx_parent_page_id (parent_page_id)
}

entity "refresh_tokens" as refresh_tokens {
  * id : BIGINT <<PK>>
  --
  * token : VARCHAR(512) <<UNIQUE>>
  * user_id : BIGINT <<FK>>
  * expiry_date : DATETIME
  * revoked : BOOLEAN DEFAULT FALSE
  --
  UNIQUE INDEX uk_token (token)
  INDEX idx_user_id (user_id)
}

' Relations

users ||--o{ books : "author_id\n(One author → Many books)"
users ||--o{ collections : "editor_id\n(One editor → Many collections)"
users ||--o{ reading_progress : "reader_id\n(One reader → Many progress)"
users ||--o{ reports : "reporter_id\n(One reporter → Many reports)"
users ||--o{ refresh_tokens : "user_id\n(One user → Many tokens)"

books ||--|| pages : "book_id\n(One book → One page)\n<<UNIQUE>>"
books ||--o{ reading_progress : "book_id\n(One book → Many progress)"
books ||--o{ reports : "book_id\n(One book → Many reports)"

books }o--o{ collections
(books, collections) .. collection_books : "Many-to-Many\nvia join table"

pages ||--o{ mini_games : "parent_page_id\n(One page → Many mini-games)"

note right of users
  **Rôles supportés** :
  - ENFANT : Lecture, personnages
  - AUTEUR : Création de livres
  - EDITEUR : Gestion de collections
  - ADMIN : Administration complète

  **Sécurité** :
  - Le mot de passe est haché avec bcrypt
  - OTP temporaire pour authentification 2FA
end note

note right of books
  **Statuts du livre** :
  - DRAFT : Brouillon en cours d'édition
  - PUBLISHED : Publié et visible par éditeurs
  - ARCHIVED : Archivé (non utilisé actuellement)

  **Formules calculées** (Hibernate @Formula) :
  - views : COUNT(reading_progress)
  - reportsCount : COUNT(reports)
end note

note bottom of pages
  **Contrainte UNIQUE sur book_id** :
  Un livre a exactement UNE page de contenu.

  **URLs S3** :
  - draftUrl : Contenu brouillon (UUID aléatoire)
  - publishedUrl : Contenu publié
    (chemin structuré : books/{id}/published/{timestamp}.json)

  **Race condition gérée** :
  La méthode getOrCreatePage() utilise
  try-catch DataIntegrityViolationException
end note

note right of collection_books
  **Table de liaison Many-to-Many** :
  Un livre peut appartenir à plusieurs collections.
  Une collection peut contenir plusieurs livres.

  **Cascade** :
  - Suppression d'un livre → suppression des liens
  - Suppression d'une collection → suppression des liens
end note

note bottom of reading_progress
  **Contrainte UNIQUE(reader_id, book_id)** :
  Un utilisateur ne peut avoir qu'une seule
  progression par livre.

  **Sac personnel** :
  is_owned = TRUE signifie que le livre
  est dans le sac personnel de l'enfant.
end note

note right of mini_games
  **Types de mini-jeux** :
  - DIGITAL_LOCK : Cadenas numérique
  - FILL_BLANKS : Texte à trous
  - QUIZ : Quiz à choix multiples
  - MEMORY : Jeu de mémoire

  **Structure JSON** :
  Le contentJson contient :
  - Configuration du jeu
  - Page de succès (ID)
  - Page d'échec (ID)
end note

@enduml
